--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1,104 +1,103 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
+# Hexo 配置文件
+## 文档: https://hexo.io/docs/configuration.html
+## 源码: https://github.com/hexojs/hexo/
 
-# Site
-title: Hexo
-subtitle: ''
-description: ''
-keywords:
-author: John Doe
-language: en
-timezone: ''
+# 网站设置
+title: Not only Code  # 网站标题
+subtitle: ''  # 网站副标题
+description: ''  # 网站描述
+keywords:  # 网站关键词
+author: Ice  # 作者名称
+language: zh-CN  # 网站语言
+timezone: ''  # 时区设置
 
-# URL
-## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
-permalink: :year/:month/:day/:title/
-permalink_defaults:
-pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+# 网址设置
+## 在此设置您的网站 URL。例如，如果您使用 GitHub Pages，请将 URL 设置为 'https://username.github.io/project'
+url: http://example.com  # 网站 URL
+permalink: :year/:month/:day/:title/  # 文章永久链接格式
+permalink_defaults:  # 永久链接默认值
+pretty_urls:  # 美化 URL 设置
+  trailing_index: true  # 设置为 false 可从永久链接中删除尾部的 'index.html'
+  trailing_html: true  # 设置为 false 可从永久链接中删除尾部的 '.html'
 
-# Directory
-source_dir: source
-public_dir: public
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
+# 目录设置
+source_dir: source  # 源文件目录
+public_dir: public  # 公共文件目录
+tag_dir: tags  # 标签目录
+archive_dir: archives  # 归档目录
+category_dir: categories  # 分类目录
+code_dir: downloads/code  # 代码目录
+i18n_dir: :lang  # 国际化目录
+skip_render:  # 跳过渲染的文件或目录
 
-# Writing
-new_post_name: :title.md # File name of new posts
-default_layout: post
-titlecase: false # Transform title into titlecase
-external_link:
-  enable: true # Open external links in new tab
-  field: site # Apply to the whole site
-  exclude: ''
-filename_case: 0
-render_drafts: false
-post_asset_folder: false
-relative_link: false
-future: true
-syntax_highlighter: highlight.js
-highlight:
-  line_number: true
-  auto_detect: false
-  tab_replace: ''
-  wrap: true
-  hljs: false
-prismjs:
-  preprocess: true
-  line_number: true
-  tab_replace: ''
+# 写作设置
+new_post_name: :title.md  # 新文章的文件名格式
+default_layout: post  # 默认布局
+titlecase: false  # 将标题转换为首字母大写
+external_link:  # 外部链接设置
+  enable: true  # 在新标签页中打开外部链接
+  field: site  # 应用于整个网站
+  exclude: ''  # 排除的链接
+filename_case: 0  # 文件名大小写（0-不变，1-小写，2-大写）
+render_drafts: false  # 是否渲染草稿
+post_asset_folder: false  # 是否启用资源文件夹
+relative_link: false  # 是否使用相对链接
+future: true  # 是否显示未来的文章
+syntax_highlighter: highlight.js  # 语法高亮器
+highlight:  # 高亮设置
+  line_number: true  # 显示行号
+  auto_detect: false  # 自动检测语言
+  tab_replace: ''  # 替换 tab 的字符
+  wrap: true  # 是否换行
+  hljs: false  # 是否使用 hljs 样式
+prismjs:  # PrismJS 设置
+  preprocess: true  # 是否预处理
+  line_number: true  # 显示行号
+  tab_replace: ''  # 替换 tab 的字符
 
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
-index_generator:
-  path: ''
-  per_page: 10
-  order_by: -date
+# 首页设置
+# path: 博客索引页的根路径（默认 = ''）
+# per_page: 每页显示的文章数（0 = 禁用分页）
+# order_by: 文章排序方式（默认按日期降序排序）
+index_generator:  # 索引生成器设置
+  path: ''  # 路径
+  per_page: 10  # 每页文章数
+  order_by: -date  # 排序方式
 
-# Category & Tag
-default_category: uncategorized
-category_map:
-tag_map:
+# 分类 & 标签
+default_category: uncategorized  # 默认分类
+category_map:  # 分类映射
+tag_map:  # 标签映射
 
-# Metadata elements
+# 元数据元素
 ## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
-meta_generator: true
+meta_generator: true  # 是否生成 meta 生成器标签
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
-## updated_option supports 'mtime', 'date', 'empty'
-updated_option: 'mtime'
+# 日期 / 时间格式
+## Hexo 使用 Moment.js 解析和显示日期
+## 您可以按照 http://momentjs.com/docs/#/displaying/format/ 中定义的格式自定义日期格式
+date_format: YYYY-MM-DD  # 日期格式
+time_format: HH:mm:ss  # 时间格式
+## updated_option 支持 'mtime'（文件修改时间）, 'date'（日期）, 'empty'（空）
+updated_option: 'mtime'  # 更新选项
 
-# Pagination
-## Set per_page to 0 to disable pagination
-per_page: 10
-pagination_dir: page
+# 分页设置
+## 将 per_page 设置为 0 可禁用分页
+per_page: 10  # 每页文章数
+pagination_dir: page  # 分页目录
 
-# Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
-include:
-exclude:
-ignore:
+# 包含 / 排除文件
+## include:/exclude: 选项仅适用于 'source/' 文件夹
+include:  # 包含的文件
+exclude:  # 排除的文件
+ignore:  # 忽略的文件
 
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
-theme: landscape
+# 扩展
+## 插件: https://hexo.io/plugins/
+## 主题: https://hexo.io/themes/
+theme: fluid  # 当前使用的主题
 
-# Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  type: ''
+# 部署
+## 文档: https://hexo.io/docs/one-command-deployment
+deploy:  # 部署设置
+  type: ''  # 部署类型
