--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-theme-fluid": "^1.9.8",
-    "hexo-theme-landscape": "^1.0.0"
+    "hexo-theme-landscape": "^1.0.0",
+    "hexo-deployer-git": "^4.0.0",
+    "hexo-generator-feed": "^4.0.0"
   }
 }
