--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://notonlycode.xyz
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -98,16 +98,19 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: butterfly
 
-# Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  type: ''
-
 # SEO
 sitemap:
   path: sitemap.xml
+  template: ./sitemap.xml
+  changefreq: daily
+  priority: 0.7
+  limit: 50000
 baidusitemap:
   path: baidusitemap.xml
+  template: ./baidusitemap.xml
+  changefreq: daily
+  priority: 0.7
+  limit: 50000
 feed:
   type: atom
   path: atom.xml
